Overflow problem with the scheduler components resolved

--- a/src/operations/templates/sass/_scheduler.scss
+++ b/src/operations/templates/sass/_scheduler.scss
@@ -19,7 +19,7 @@ $sch-margin: 7px;
 
 #sn-sch-md-content {
     padding: 15px 0 15px 0;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .sn-sch-gs-col {
